:recycle: Refactor CI so that it doesn't use OF test docker images
Part of https://github.com/open-formulieren/open-forms/issues/3389

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,7 +42,7 @@ tests_require =
     isort
     black
     flake8
-
+    coverage
 [options.packages.find]
 include =
     prefill_haalcentraalhr
@@ -56,8 +56,8 @@ tests =
     isort
     black
     flake8
+    coverage
 pep8 = flake8
-coverage = pytest-cov
 docs =
     sphinx
     sphinx-rtd-theme
