--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -68,6 +68,7 @@ jobs:
           python src/manage.py compilemessages
           coverage run --source=prefill_haalcentraalhr src/manage.py test prefill_haalcentraalhr
           coverage combine
+          coverage xml -o coverage-extension.xml
         env:
           DJANGO_SETTINGS_MODULE: openforms.conf.ci
           SECRET_KEY: dummy
@@ -76,9 +77,11 @@ jobs:
         working-directory: ${{ github.workspace }}/open-forms
 
       - name: Publish coverage report
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v3.1.4
         with:
+          root_dir: ${{ github.workspace }}/extension
           working-directory: ${{ github.workspace }}/open-forms
+          files: ./coverage-extension.xml
 
   docker_build:
     name: Build Docker image
