:wrench: Update package name

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 # setuptools config
 # see http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
 [metadata]
-name = prefill_haalcentraalhr
+name = open-forms-ext-haalcentraal-hr
 version = 0.1.0
 description = TODO
 long_description = file: README.rst
