:alien: Replace zgw-consumers-ext usage
It's being removed in Open Forms itself in favour of the
utilities shipped with the library itself.

--- a/setup.cfg
+++ b/setup.cfg
@@ -43,6 +43,7 @@ tests_require =
     black
     flake8
     coverage
+    zgw_consumers[testutils]
 [options.packages.find]
 include =
     prefill_haalcentraalhr
@@ -57,6 +58,7 @@ tests =
     black
     flake8
     coverage
+    zgw_consumers[testutils]
 pep8 = flake8
 docs =
     sphinx
