:rotating_light: Fix flake8 unused import

--- a/setup.cfg
+++ b/setup.cfg
@@ -94,4 +94,4 @@ DJANGO_SETTINGS_MODULE=testapp.settings
 [flake8]
 ignore=E203,E501,F405,W503
 max-line-length=88
-exclude=env,doc
+exclude=env,doc,.tox
